--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <body>
       <h1>
-    Hello there, awesome person! 
+<img src="https://avatars.githubusercontent.com/u/74672319?v=4">
+
       </h1>
   </body>
 
