update index with ordered tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <img src="https://avatars.githubusercontent.com/u/74672319?v=4">
 
       </h1>
+      <ol>
+    <li>wikipedia</li>
+    <li>amazon</li>
+    <li>flipkart</li>
+</ol>
   </body>
 
 </html>
